# PongGame

./: .gitignore  CMakeLists.txt  README.md  main.code-workspace
include/: Ball.hpp  Colors.hpp  CpuPaddle.hpp  Game.hpp  Paddle.hpp
src/: CpuPaddle.cpp  CpuPaddle.h  Game.cpp  Paddle.cpp  PlayerPaddle.h  ball.cpp  ball.h  config.h  main.cpp  paddle.h
